--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "ngrok": "^5.0.0-beta.2",
     "uuid": "^11.0.3"
   }
 }
